--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body{
 /* ----------------NAVBAR ------------------------ */
 header{
   background-color: hsl(206, 100%, 5%);
-  height: 150px;
+  height: 9.4rem;
   display: flex;
   align-items: center;
 
@@ -29,7 +29,7 @@ header{
   align-items: center;
   justify-content: flex-end;
   width: 100%;
-  height: 150px;
+  height: 9.4rem;
 
 }
 
@@ -41,11 +41,11 @@ header{
 
 .links-list{
   align-items: center;
-  padding: 50px;
-  height: 150px;
+  padding: 3.2rem;
+  height: 9.4rem;
   position: absolute;
-  right: 200px;
-  top: 0px;
+  right: 12.5rem;
+  top: 0;
   display: none;
   background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
 
@@ -61,18 +61,18 @@ header{
   color: black;
   text-decoration: none;
   padding: 1rem;
-  letter-spacing: 2px;
+  letter-spacing: 0.2rem;
 }
 
 .links-list li:hover{
   background-color: hsl(60, 100%, 85%);
-  border-radius: 5px;
+  border-radius: 0.3rem;
 }
 
 .menu-button{
   list-style: none;
-  margin: 0 130px 0 0;
-  padding: 0 10px 0 10px;
+  margin: 0 8.1rem 0 0;
+  padding: 0 0.6rem 0 0.6rem;
 }
 .menu-button:hover .links-list{
   display: flex;
@@ -98,22 +98,22 @@ main{
 }
 
 .container-one{
-  margin-top: 50px;
+  margin-top: 3.1rem;
   background: url('../img/code.svg')  no-repeat center center/cover;
-
-  border-radius: 17px;
+  border-radius: 2rem;
   width: 75%;
   height: 900px;
   display: flex;
   align-items: center;
   flex-direction: column;
 
+
 }
 
 
 /*-------------- SECTION-ONE ---------------------*/
 .section-one{
-  margin-top: 50px;
+  margin-top: 3.1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,7 +124,7 @@ main{
 .line{
   padding: 1px;
   background-color: hsl(39, 100%, 45%);
-  width: 151px;
+  width: 9.4rem;
 
 }
 .vertical{
@@ -140,26 +140,26 @@ main{
   height: 240px;
   line-height: 5rem;
   border: 2px solid hsl(48, 100%, 45%);
-  border-radius: 3px;
+  border-radius: 0.2rem;
 
 }
 
 
 .div-one h1{
-  font-size: 20px;
+  font-size: 1.3rem;
   text-align: center;
 }
 
 
 .div-one p:first-of-type{
   text-align: center;
-  font-size: 30px;
+  font-size: 1.9rem;
   font-weight: bold;
   color: hsl(36, 100%, 60%);
 }
 
 .div-one p:last-of-type{
-  font-size: 18px;
+  font-size: 1em;
   font-weight: bold;
   text-align: center;
 }
@@ -169,7 +169,7 @@ main{
 /*---------------SECTION-TWO---------------------*/
 
 .section-two{
-  margin-top: 150px;
+  margin-top: 9.4rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -182,7 +182,7 @@ main{
   height: 240px;
   line-height: 5rem;
   border: 2px solid hsl(48, 100%, 45%);
-  border-radius: 3px;
+  border-radius: 0.2rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -190,29 +190,29 @@ main{
 }
 
 .div-two p:first-of-type{
-  font-size: 18px;
+  font-size: 1em;
   font-weight: bold;
   text-align: center;
 }
 
 .div-two p:last-of-type{
   text-align: center;
-  font-size: 30px;
+  font-size: 1.9rem;
   font-weight: bold;
   color: hsl(336, 100%, 45%);
 
 }
 .left{
-  left: -104px;
-  top: 225px;
-  width: 210px;
+  left: -6.5rem;
+  top: 14.1rem;
+  width: 13.2rem;
 }
 
 
 .right{
-  right: -104px;
-  top: 225px;
-  width: 210px;
+  right: -6.5rem;
+  top: 14.1rem;
+  width: 13.2rem;
 
 }
 
@@ -220,9 +220,9 @@ main{
 
 
 .element{
-  margin-top: 89px;
+  margin-top: 5.6rem;
   width: 75%;
-  height: 100px;
+  height: 6.3rem;
   display: flex;
   justify-content: space-between;
   align-items:flex-start;
@@ -232,13 +232,13 @@ main{
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 40px;
+  font-size: 2.5rem;
   font-weight: bolder;
-  height: 80px;
-  width: 200px;
+  height: 5rem;
+  width: 12.5rem;
   background-color: hsl(0, 0%, 0%);
   border: 2px solid hsl(48, 100%, 45%);
-  border-radius: 3px;
+  border-radius: 0.2rem;
   -webkit-transform: skew(-5deg, -5deg) rotate(5deg);
   transform: skew(-5deg, -5deg) rotate(5deg);
   -webkit-transform-origin: center center;
@@ -261,13 +261,13 @@ main{
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 40px;
+  font-size: 2.54rem;
   font-weight: bolder;
-  height: 80px;
-  width: 200px;
+  height: 5rem;
+  width: 12.5rem;
   background-color: hsl(0, 0%, 0%);
   border: 2px solid hsl(48, 100%, 45%);
-  border-radius: 3px;
+  border-radius: 0.2rem;
   -webkit-transform: skew(-5deg, -5deg) rotate(5deg);
   transform: skew(-5deg, -5deg) rotate(5deg);
   -webkit-transform-origin: center center;
@@ -289,13 +289,13 @@ main{
 /*----------------SIDEBAR-----------------------*/
 
 .sidebar{
-  width: 15%;
-  height: 600px;
+  width: 16%;
+  height: 37.5rem;
   background-color: hsl(206, 100%, 6%);
-  box-shadow: inset 0 0 0.5em 0 hsl(206, 100%, 6%),
-  0 0 0.5em 0 hsl(206, 100%, 6%);
-  border: 3px solid hsl(206, 100%, 25%);
-  border-radius: 3px;
+  box-shadow: inset 0 0 0.6rem 0 hsl(206, 100%, 6%),
+  0 0 0.6rem 0 hsl(206, 100%, 6%);
+  border: 0.2rem solid hsl(206, 100%, 25%);
+  border-radius: 0.2rem;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -304,35 +304,35 @@ main{
 
 }
 .sidebar h2{
-  margin-top: 10px;
-  padding: 5px;
+  margin-top: 1rem;
+  padding: 0.3rem;
   color: orange;
   border: 2px solid hsl(48, 100%, 45%);
-  border-radius: 3px;
-  box-shadow: inset 0 0 0.5em 0 hsl(48, 100%, 45%),
-  0 0 0.5em 0 hsl(48, 100%, 45%);
+  border-radius: 0.2rem;
+  box-shadow: inset 0 0 0.6rem 0 hsl(48, 100%, 45%),
+  0 0 0.6rem 0 hsl(48, 100%, 45%);
 
 
 }
 
 .sidebar p{
-  line-height: 1.8em;
-  font-size: 15px;
+  line-height: 1.6rem;
+  font-size: 1rem;
   font-weight: bold;
-  letter-spacing:  3px;
+  letter-spacing:  0.2rem;
   text-align: center;
   color: hsl(0 0% 97%);
 
 }
 
-.sidebar > a{
-  font-size: 18px;
+.button{
+  font-size: 1em;
   text-decoration: none;
   color: hsl(317 100% 54%);
-  border:  3px solid hsl(317 100% 54%);
-  padding: 5px 10px;
-  border-radius: 3px;
-  text-shadow: 0 0 0.125em hsl(0 0% 100% /0.3), 0 0 0.45em currentColor;
+  border:  0.2rem solid hsl(317 100% 54%);
+  padding: 0.4rem 0.7rem;
+  border-radius: 0.2rem;
+  text-shadow: inset 0 0 0.125em hsl(0 0% 100% /0.3), 0 0 0.45em currentColor;
   box-shadow: inset 0 0 0.5em 0 hsl(317 100% 54%), 0 0 0.5em 0 hsl(317 100% 54%);
 
 
@@ -347,19 +347,19 @@ main{
 .container-two{
   background: url('../img/clean-version.png') no-repeat center center/cover;
   width: 75%;
-  height: 770px;
-  border-radius: 17px;
+  height: 48.1rem;
+  border-radius: 2rem;
   display: flex;
   align-items: center ;
   justify-content: space-around;
   flex-direction: column;
-  margin-top: 50px;
+  margin-top: 3.2rem;
 
 
 
 }
 .section-three{
-  padding: 30px;
+  padding: 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -386,7 +386,7 @@ main{
 }
 
 .div-three p:first-of-type{
-  font-size: 15px;
+  font-size: 0.9rem;
   font-weight: bold;
   text-transform: uppercase;
   color: hsl(82, 82%, 44%);
@@ -396,8 +396,8 @@ main{
 
 .container-two > p{
   font-weight: bold;
-  padding: 7px;
-  height: 40px;
+  padding: 0.5rem;
+  height: 2.5rem;
   background-color: hsl(0 0% 0%);
   border: 2px solid hsl(82, 82%, 44%);
   box-shadow: inset 0 0 0.5em 0 hsl(82, 82%, 44%),
@@ -424,12 +424,12 @@ main{
 }
 
 .section-four p:first-of-type{
-  font-size: 20px;
+  font-size: 1.3rem;
   font-weight: bold;
   color:orange;
   background-color: black;
-  padding: 10px;
-  border-radius: 3px;
+  padding: 0.7rem;
+  border-radius: 0.2rem;
   box-shadow: inset 0 0 0.5em 0 orange,
   0 0 0.5em 0 orange;
 }
@@ -438,11 +438,11 @@ main{
 
 
 .section-four p:nth-child(2){
-  font-size: 20px;
+  font-size: 1.3rem;
   font-weight: bold;
-  padding: 10px;
-  border-radius: 3px;
-  margin-right: 10px;
+  padding: 0.7rem;
+  border-radius: 0.2rem;
+  margin-right: 0.7rem;
   box-shadow:  0 0 0.5em 0 hsl(82, 82%, 44%),
   0 0 0.5em 0 hsl(82, 82%, 44%);
 }
@@ -452,13 +452,13 @@ main{
 
 
 .section-four p:last-of-type{
-  font-size: 20px;
+  font-size: 1.3rem;
   font-weight: bold;
   background-color: black;
   color: orange;
-  padding: 10px;
-  border-radius: 3px;
-  margin-right: 10px;
+  padding: 0.7rem;
+  border-radius: 0.2rem;
+  margin-right: 0.7rem;
   box-shadow: inset 0 0 0.5em 0 orange,
   0 0 0.5em 0 orange;
 }
@@ -470,14 +470,14 @@ main{
 /*------------------SIDEBAR-LINKS--------------------------------*/
 
 .sidebar-links{
-  border-radius: 3px;
-  width: 15%;
-  height: 500px;
+  border-radius: 0.2rem;
+  width: 16%;
+  height: 31.3rem;
   background-color: hsl(206, 100%, 5%);
   box-shadow: inset 0 0 0.5em 0 hsl(206, 100%, 6%),
   0 0 0.5em 0 hsl(206, 100%, 6%);
-  border: 3px solid hsl(206, 100%, 25%);
-  border-radius: 3px;
+  border: 0.2rem solid hsl(206, 100%, 25%);
+  border-radius: 0.2rem;
   display: flex;
   justify-content:space-around;
   align-items: center;
@@ -485,12 +485,12 @@ main{
 }
 
 .sidebar-links > p{
-  padding: 7px;
+  padding: 0.5rem;
   border: 2px solid hsl(317 100% 54%);
   box-shadow: inset 0 0 0.5em 0 hsl(317 100% 54%),
   0 0 0.5em 0 hsl(317 100% 54%);
-  border-radius: 3px;
-  font-size: 25px;
+  border-radius: 0.2rem;
+  font-size: 1.6rem;
   font-weight: bold;
 }
 
