--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,6 @@ main{
   background: url('../img/code.svg')  no-repeat center center/cover;
   border-radius: 2rem;
   width: 75%;
-  height: 900px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -145,8 +144,10 @@ main{
   margin-top: 3.1rem;
   display: flex;
   justify-content: center;
+  width: 55%;
   align-items: center;
   position: relative;
+
 }
 
 
@@ -165,11 +166,10 @@ main{
 
 .div-one{
   background-color: hsl(0, 0%, 10%);
-  width: 750px;
-  height: 240px;
   line-height: 5rem;
   border: 2px solid hsl(48, 100%, 45%);
   border-radius: 0.2rem;
+
 
 }
 
@@ -177,6 +177,7 @@ main{
 .div-one h1{
   font-size: 1.3rem;
   text-align: center;
+  width: 100%;
 }
 
 
@@ -185,12 +186,16 @@ main{
   font-size: 1.9rem;
   font-weight: bold;
   color: hsl(36, 100%, 60%);
+  width: 100%;
+
 }
 
 .div-one p:last-of-type{
   font-size: 1em;
   font-weight: bold;
   text-align: center;
+  width: 100%;
+
 }
 /*------------------------------------------------*/
 
@@ -200,15 +205,15 @@ main{
 .section-two{
   margin-top: 9.4rem;
   display: flex;
+  width: 40%;
   justify-content: center;
   align-items: center;
   position: relative;
+
 }
 
 .div-two{
   background-color:hsl(0, 0%, 0%);
-  width: 550px;
-  height: 240px;
   line-height: 5rem;
   border: 2px solid hsl(48, 100%, 45%);
   border-radius: 0.2rem;
@@ -241,11 +246,12 @@ main{
 
 .element{
   margin-top: 5.6rem;
-  width: 50%;
-  height: 9rem;
+  width: 65%;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: flex-start;
+
 
 }
 .element p:first-of-type{
@@ -255,8 +261,8 @@ main{
   margin-right: 1rem;
   font-size: 2.5rem;
   font-weight: bolder;
-  height: 5rem;
-  width: 12.5rem;
+  height: 6rem;
+  width: 30%;
   background-color: hsl(0, 0%, 0%);
   border: 2px solid hsl(48, 100%, 45%);
   border-radius: 0.2rem;
@@ -284,8 +290,8 @@ main{
   align-items: center;
   font-size: 2.54rem;
   font-weight: bolder;
-  height: 5rem;
-  width: 12.5rem;
+  height: 6rem;
+  width: 30%;
   background-color: hsl(0, 0%, 0%);
   border: 2px solid hsl(48, 100%, 45%);
   border-radius: 0.2rem;
@@ -327,6 +333,8 @@ main{
 
 }
 .sidebar h2{
+  width: 80%;
+  text-align: center;
   margin-top: 1rem;
   padding: 0.3rem;
   color: orange;
@@ -339,6 +347,7 @@ main{
 }
 
 .sidebar p{
+  width: 80%;
   line-height: 1.6rem;
   font-size: 1rem;
   font-weight: bold;
@@ -348,6 +357,8 @@ main{
 
 }
 .bright-button{
+  width: 50%;
+  text-align: center;
   font-size: 1rem;
   text-decoration: none;
   color: hsl(317 100% 54%);
@@ -390,7 +401,7 @@ main{
 .container-two{
   background: url('../img/clean-definitive.png') no-repeat center center/cover;
   width: 75%;
-  height: 48.1rem;
+  height: 51rem;
   border-radius: 2rem;
   display: flex;
   align-items: center ;
@@ -403,6 +414,7 @@ main{
 
 .section-three{
   padding: 2rem;
+  width:30%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -415,8 +427,8 @@ main{
 
 .div-three{
   background-color: hsl(0,0%,0%);
-  width: 330px;
-  height: 330px;
+  width: 20.7rem;
+  height: 20.7rem;
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
   line-height: 5rem;
@@ -428,7 +440,7 @@ main{
   0 0 0.5em 0 hsl(317 100% 54%);
 }
 
-.div-three p:first-of-type{
+.div-three > p{
   font-size: 0.9rem;
   font-weight: bold;
   text-transform: uppercase;
@@ -438,6 +450,8 @@ main{
 }
 
 .container-two > p{
+  width: 32%;
+  text-align: center;
   font-weight: bold;
   padding: 0.5rem;
   height: 2.5rem;
@@ -455,8 +469,8 @@ main{
 /*------------------ SECTION-FOUR -------------------*/
 
 .section-four{
-  width: 600px;
-  height: 150px;
+  width: 43%;
+  height: 9.4rem;
   background-color: black;
   display: flex;
   align-items: center;
@@ -468,6 +482,8 @@ main{
 }
 
 .section-four p:first-of-type{
+  width: 33%;
+  text-align: center;
   font-size: 1.3rem;
   font-weight: bold;
   color:orange;
@@ -482,6 +498,8 @@ main{
 
 
 .section-four p:nth-child(2){
+  width: 15%;
+  text-align: center;
   font-size: 1.3rem;
   font-weight: bold;
   padding: 0.7rem;
@@ -496,6 +514,8 @@ main{
 
 
 .section-four p:last-of-type{
+  width: 30%;
+  text-align: center;
   font-size: 1.3rem;
   font-weight: bold;
   background-color: black;
@@ -529,6 +549,8 @@ main{
 }
 
 .sidebar-links > p{
+  width: 50%;
+  text-align: center;
   padding: 0.5rem;
   border: 2px solid hsl(317 100% 54%);
   box-shadow: inset 0 0 0.5em 0 hsl(317 100% 54%),
@@ -628,7 +650,7 @@ footer p{
 
 
 .main-content{
-  font-size: 16px;
+  font-size: 1rem;
   color: hsl(0 0% 95%);
   display: flex;
   flex-wrap: wrap;
@@ -665,10 +687,10 @@ footer p{
   0 0 0.3em  hsl(206, 100%, 20%);
 }
 
-p:nth-child(1){
+.main-content p:nth-child(1){
   width:40%;
   text-align: center;
-  font-size: 21px;
+  font-size: 1.4rem;
   font-weight: bold;
   color: hsl(0 0% 95%);
   border: 1px solid white;
@@ -705,6 +727,13 @@ p:nth-child(1){
   font-weight: bold;
 }
 
+/*--------------------------------------------------------*/
+
+
+
+/*-----------------------CONTACT PAGE------------------------*/
+
+h1
 
 
 
@@ -763,6 +792,7 @@ p:nth-child(1){
 
 
 
-
+/*<sticky footer to bottom*/
+ /* active current page*/
 
 /* ricordarsi di levare il .html dalle pagine*/
